--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         />
 
     <com.zzt8888.taiwanmap.MapView
+        android:background="@color/color_map_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
